# nes_emulator

./: CMakeLists.txt  Makefile  cmake_install.cmake  conanfile.txt
include/: AddressMode.hpp  AddressingBehaviour.hpp  AddressingConcept.hpp  AddressingModes.hpp  AdressingModesImpl.hpp  FlagsFunctions.hpp  Instruction.hpp  Memory.hpp  Opcode.hpp  Pages.hpp  Processor6502.hpp  ProgramStatusRegister.hpp  Register.hpp  StatusFlags.hpp  Types.hpp
src/: main.cpp
tests/: addressing_mode.cpp  flag_detection.cpp  generic_register.cpp  main.cpp  page_calculation.cpp  status_flags.cpp
